[package]
name = "rostbrot"
version = "0.1.0"
authors = ["Matthias Wolf <m@sushinara.net>"]
default-run = "rostbrot"

[dependencies]
bincode = "*"
clap = "*"
env_logger = "0.7.1"
image = "*"
log = "0.4.0"
num-complex = "*"
num-traits = "*"
pbr = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
serde_yaml = "*"

[dev-dependencies]
tempfile = "3"
